--- a/aa.html
+++ b/aa.html
@@ -5,8 +5,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>detcfvyg</h1>
-    <h2>fcghjujni</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure non ratione ex voluptatum, culpa amet nostrum eveniet? Cum velit, necessitatibus quod autem eum repellendus sit ex aliquam pariatur corporis perferendis.</p>
+    <h1>INDIA</h1>
+    <hr>
+    <p> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; India is a one of the greatest country in the world in the India main states was Andra Pradesh, Tamilanadu , Karnataka and more
+       lorm Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat laudantium iusto quidem architecto! Cupiditate vitae aliquam vero tenetur reiciendis obcaecati eaque, nemo fugiat magni ipsum minima incidunt distinctio est totam?njnjk jkhjk jnjkb jn      a fndjf fdgfjd dfghfg rgfdh
+
+    </p>
+    <h4 class="abc">Andra pradesh</h4>
+    <p id="xyz">chittoor district <br>
+        kurnool <br>
+        kadapa <br>
+        ananthapur
+    </p>
+    <span style="color:green; background-color: gold;"> kuppam </span>
+    <h3 style="color: darkblue; background-color: aqua;"  class="abc" id="xyz">helow world "who am I"<br> i am your god, me only control this Universe </h3>
+     <h2 style="font-family: 'Courier New', Courier, monospace;" >what am I</h2>
+     <h2 style="cursor: col-resize;">who am I</h2>
+     <h2 style="display: inline-flex;">INDIA</h2>
 </body>
 </html>
